--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<header>
 								<h1>Hi. I'm <strong>Sabari Girish</strong></h1>
 							</header>
-							<p>I love programming and I currently work at HP in Core Payments Team. I code mostly in Java and Python. Did my schooling from SBOA and my undergraduation from MIT,Chennai. My area of interest is web security and Prediction analytics of massive data ( Data science ) using cloud. I love participating in hackathons and mentoring!.Hacking for good causes is my passion!.</p>
+							<p>I love programming and I currently work at HP Business Intelligence Team. I code mostly in c++ and Python. Did my schooling from SBOA and my undergraduation from MIT,Chennai. My area of interest is Data Mining and Machine Learning of massive data.</p>
 							<a href="#work" class="button button-small">My Work Experience</a>
 						</div>
 					</div>
