--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<header>
 								<h1>Hi. I'm <strong>Sabari Girish</strong></h1>
 							</header>
-							<p>I love programming and I currently work at HP Business Intelligence Team. I code mostly in c++ and Python. Did my schooling from SBOA and my undergraduation from MIT,Chennai. My area of interest is Data Mining and Machine Learning of massive data.</p>
+							<p>I love programming and I am currently pursuing Masters at Rochester Institute of Technology. I was working at Hewlett Packard and I code mostly in Java and Python. Did my schooling from SBOA and my undergraduation from MIT,Chennai. My area of interest is Data Mining and Machine Learning of massive data.</p>
 							<a href="#work" class="button button-small">My Work Experience</a>
 						</div>
 					</div>
@@ -72,7 +72,7 @@
 								<section class="box box-style1">
 									<h3>Hewlett Packard</h3></br>
 									<img src="images/paypalsmall.jpg" height="75" width="75" style="border-radius: 50%;box-shadow: 0 0 8px rgba(0, 0, 0, .8);"/>
-									<p><h4>August 2013 - Present</h4> Working as Software Engineer responsible for query, analysis and reporting of Vodafone's enterprise information using SAP business objects. </p>
+									<p><h4>August 2013 - July 2015</h4> Worked as Software Engineer responsible for query, analysis and reporting of Vodafone's enterprise information using SAP business objects. </p>
 								</section>
 							</div>
 							
@@ -196,7 +196,7 @@
 					
 					<footer>
 						<p id="copyright">
-							&copy; 2013 Copyright Designed by <a href="https://www.facebook.com/sabarigirish8" target="_blank">SABARI GIRISH</a></p>
+							&copy; 2014 Copyright Designed by <a href="https://www.facebook.com/sabarigirish8" target="_blank">SABARI GIRISH</a></p>
 					</footer>
 				</article>
 			</div>
