--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<header>
 								<h1>Hi. I'm <strong>Sabari Girish</strong></h1>
 							</header>
-							<p>I love programming and I am currently pursuing Masters at Rochester Institute of Technology. I was working at Hewlett Packard and I code mostly in Java and Python. Did my schooling from SBOA and my undergraduation from MIT,Chennai. My area of interest is Data Mining and Machine Learning of massive data.</p>
+							<p>I love programming and I am currently pursuing Masters at Rochester Institute of Technology. I was working at Hewlett Packard and I code mostly in Java and Python. Did my schooling from SBOA and my undergraduation from MIT,Chennai. My area of interest is Problem Solving and Data Analytics.</p>
 							<a href="#work" class="button button-small">My Work Experience</a>
 						</div>
 					</div>
