--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<article class="container">
 					<div class="row">
 						<div class="4u">
-							<span class="me image image-full"><img src="images/suit.jpg" alt="" /></span>
+							<span class="me image image-full"><img src="images/dp.jpg" alt="" /></span>
 						</div>
 						<div class="8u">
 							<header>
