--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							<div class="4u">
 								<section class="box box-style1">
 									<h3>Dropbox Clone</h3></br>
-									<img src="images/dropbox.png" height="100" width="100" style="border-radius: 50%;box-shadow: 0 0 8px rgba(0, 0, 0, .8);"/>
+									<img src="images/wearable.png" height="100" width="100" style="border-radius: 50%;box-shadow: 0 0 8px rgba(0, 0, 0, .8);"/>
 									<p>Developed a clone of Dropbox with upload, Download and Sync File Capalibilities. Programmed in C# ,MySQL as DB , PHP  and Python for the backend.</p>
 								</section>
 							</div>
