--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@
 						<div class="row">
 							<div class="4u">
 								<section class="box box-style1">
-									<h3>Dropbox Clone</h3></br>
+									<h3>Middleware Solution for Wearable Devices</h3></br>
 									<img src="images/ms.png" height="100" width="100" style="border-radius: 50%;box-shadow: 0 0 8px rgba(0, 0, 0, .8);"/>
-									<p>Developed a clone of Dropbox with upload, Download and Sync File Capalibilities. Programmed in C# ,MySQL as DB , PHP  and Python for the backend.</p>
+									<p>Designed and developed a software layer that masks the heterogeneity issue in wearable devices. provided API standards for each wearable devices that is used to develop applications integrating
+wearable devices.</p>
 								</section>
 							</div>
 							
