--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ wearable devices.</p>
 							<div class="12u">
 								<h3>Find me on ...</h3>
 								<ul class="social">
-									<li class="linkedin"><a href="https://www.linkedin.com/profile/view?id=265226438&trk=nav_responsive_tab_profile" target="_blank" class="icon icon-linkedin"><span>LinkedIn</span></a></li>
+									<li class="linkedin"><a href="https://www.linkedin.com/in/sabarigirishmahendran" target="_blank" class="icon icon-linkedin"><span>LinkedIn</span></a></li>
 	     							<li class="github"><a href="https://github.com/sabarigirish" target="_blank" class="icon icon-github"><span>Github</span></a></li>
 									<li class="twitter"><a href="https://twitter.com/sabarigirish_m" target="_blank" class="icon icon-twitter"><span>Twitter</span></a></li>
 									<li class="facebook"><a href="https://www.facebook.com/sabarigirish8" target="_blank" class="icon icon-facebook"><span>Facebook</span></a></li>
