--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
 							<div class="6u">
 							  <section class="box box-style1">
 									
-									<h3>Web Developer Intern</h3></br>
-									<img src="images/24x7.jpg" height="75" width="75"/>
-								  <p><h4>April 2012-June 2012</h4> Developed a Online tutoring portal for 24x7OnlineTutoring.com using PHP and MySQL to connect Students and Tutors across globe.</p>
+									<h3>Amazon</h3></br>
+									<img src="images/amazon.jpg" height="75" width="75"/>
+								  <p><h4>April 2012-June 2012</h4> Created an application to capture the usage metrics of the products developed by the team and
+to surface them in an user interface.</p>
 								</section>
 							</div>
 									
