--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ route poisoning.</p>
 							  <section class="box box-style1">
 									<h3>Text mining and Classification of Tweets</h3></br>
 									<img src="images/Twitter.jpg" height="100" width="100" />
-									<p>Performed text mining using NLTK-Natural Language Processing module. Classified the tweets based on their genres using Naive Bayes and Support Vector
+									<p>Streamed tweets from Twitter using Twitter Rest API. Performed text mining using NLTK-Natural Language Processing module. Classified the tweets based on their genres using Naive Bayes and Support Vector
 Machine.</p>
 									
 								</section>
