--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<div class="6u">
 								<section class="box box-style1">
 									<h3>Amazon</h3></br>
-									<img src="images/amazon.jpg" height="100" width="140"/>
+									<img src="images/amazon1.jpg" height="75" width="75"/>
 								  <p><h4>August 2016 - December 2016</h4> Created an application to capture the usage metrics of the products developed by the team and
 to surface them in an user interface.</p>
 					
