--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						</div>
 						<div class="8u">
 							<header>
-								<h1>Hi. I'm <strong>Sabari Girish</strong></h1>
+								<h1>Hi. I'm <strong>Sabari Girish Mahendran</strong></h1>
 							</header>
 							<p>I love programming and I am currently pursuing Masters at Rochester Institute of Technology. I was working at Amazon and Hewlett Packard. I code mostly in Java and Python. Did my schooling from SBOA and my undergraduation from MIT,Chennai. My area of interests are Distributed Systems and Big Data Analytics.</p>
 							<a href="#work" class="button button-small">My Work Experience</a>
