--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ to surface them in an user interface.</p>
 									
 									<h3>Hewlett Packard</h3></br>
 									<img src="images/paypalsmall.jpg" height="75" width="75" style="border-radius: 50%;box-shadow: 0 0 8px rgba(0, 0, 0, .8);"/>
-									<p><h4>August 2013 - July 2015</h4> Worked as Software Engineer - responsible for query, analysis and reporting of Vodafone's enterprise information using SAP business objects. </p>
+									<p><h4>August 2013 - July 2015</h4> Worked as a Business Intelligence Engineer - responsible for query, analysis and reporting of Vodafone's enterprise information using SAP business objects. </p>
 								</section>
 							</div>
 									
