--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Sabari Girish - Software Engineer at HP </title>
+		<title>Sabari Girish - Masters in Computer Science </title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="Sabari Girish" content="Love open source projects.Fan of python and Java coding!I always try to keep it simple. Love to solve problems with simple solutions" />
 		<meta name="srinivas,avireddy,random4,mitsat,python,paypal,MR-API" content="" />
