--- a/index.html
+++ b/index.html
@@ -120,10 +120,9 @@ Machine.</p>
 							</div>
 							<div class="4u">
 								<section class="box box-style1">
-									<h3>Middleware Solution for Wearable Devices</h3></br>
-									<img src="images/ms.png" height="100" width="100" style="border-radius: 50%;box-shadow: 0 0 8px rgba(0, 0, 0, .8);"/>
-									<p>Designed and developed a software layer that masks the heterogeneity issue in wearable devices. provided API standards for each wearable devices that is used to develop applications integrating
-wearable devices.</p>
+									<h3>Spotify clone</h3></br>
+									<img src="images/spotify.jpg" height="100" width="100" style="border-radius: 50%;box-shadow: 0 0 8px rgba(0, 0, 0, .8);"/>
+									<p>Downloaded the metadata of the songs using the Spotify API. Developed an application with the metadata that resembles similar to the Spotify application using the Cassandra database</p>
 									
 								</section>
 							</div>					
