--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ to surface them in an user interface.</p>
 							<div class="4u">
 								<section class="box box-style1">
 									<h3>Routing Information Protocol</h3></br>
-									<img src="images/RoutingInformationProtocol.jpg" height="100" width="100" />
+									<img src="images/RoutingInformationProtocol.jpg" height="100" width="100" style="border-radius: 50%;box-shadow: 0 0 8px rgba(0, 0, 0, .8);" />
 								  <p> Implemented and simulated Routing Information Protocol version 2 using Distance Vector algorithm and
 route poisoning.</p>
 									
@@ -121,7 +121,7 @@ Machine.</p>
 							<div class="4u">
 								<section class="box box-style1">
 									<h3>Spotify clone</h3></br>
-									<img src="images/spotify.jpg" height="100" width="100" style="border-radius: 50%;box-shadow: 0 0 8px rgba(0, 0, 0, .8);"/>
+									<img src="images/spotify.jpg" height="100" width="100" />
 									<p>Downloaded the metadata of the songs using the Spotify API. Developed an application with the metadata that resembles similar to the Spotify application using the Cassandra database</p>
 									
 								</section>
